--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -13,6 +13,9 @@
     .advantages {
         padding: 70px 10px 80px 10px;
     }
+    .consultation {
+        padding: 100px 0 92px 10px;
+    }
 }
 
 @media (max-width: 425px) {
@@ -23,7 +26,7 @@
         margin-top: 15px;
     }
   } 
-}
+
 
 .promo {
     &__header {
@@ -63,4 +66,15 @@
     }
 }
 
-
+.consultation {
+    .title_left {
+        text-align: center;
+    }
+    &__descr {
+        text-align: center;
+    }
+    .feed-form {
+        margin: 36px auto;
+    }
+}
+}
