--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,9 @@
 @import 'blocks/buttons';
 @import 'blocks/advantages';
 @import 'blocks/titles';
+@import 'blocks/consultation.scss';
+@import 'blocks/forms.scss';
 @import './media';
+
+
+
