--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -19,4 +19,10 @@
         height: 55px;
         font-style: 16px;
     }
+    &_mini {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
+        text-align: center;
+    }
 }
