--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -23,7 +23,7 @@
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        left: auto;
+        // left: auto;
         right: -66px;
         border: none;
         background-color: #fff;
