--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -37,6 +37,14 @@
 
     }
 
+    .reviews {
+        &__item {
+        padding: 0 10px 0 10px;
+
+        }
+
+    }
+
 }
   
 
@@ -117,5 +125,24 @@
 
     }
 
+}
+
+.reviews {
+    &__item {
+        margin-top: 60px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+    }
+    &__text {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        width: 100%;
+        margin-left: 5px;
+    }
+    &__descr {
+        width: 100%;
+    }
 }
 }
