--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,8 @@
 @import 'blocks/forms.scss';
 @import 'blocks/carousel.scss';
 @import 'blocks/catalog.scss';
+@import 'blocks/reviews.scss';
+
 @import './media';
 
 
