--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -40,9 +40,19 @@
     .reviews {
         &__item {
         padding: 0 10px 0 10px;
-
         }
+        &__descr {
+            width: 100%;
+        }
+    }
 
+    .footer {
+        margin-top: 10px;
+        &__info {
+            width: 390px;
+            height: 250px;
+            padding-top: 30px;
+        } 
     }
 
 }
@@ -143,6 +153,21 @@
     }
     &__descr {
         width: 100%;
+    }
+}
+
+.footer {
+    height: 630px;
+    
+    &__info {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        height: 215px;
+        background: $main-color;
+        padding: 15px 68px 60px 68px;
     }
 }
 }
