--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,7 @@
 @import 'blocks/carousel.scss';
 @import 'blocks/catalog.scss';
 @import 'blocks/reviews.scss';
+@import 'blocks/footer.scss';
 
 @import './media';
 
