--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,8 @@
 @import 'blocks/catalog.scss';
 @import 'blocks/reviews.scss';
 @import 'blocks/footer.scss';
+@import 'blocks/modal.scss';
+
 
 @import './media';
 
