--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'base/variables';
+@import 'base/animation';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -19,6 +20,7 @@
 @import 'blocks/footer.scss';
 @import 'blocks/modal.scss';
 @import 'blocks/pageup.scss';
+
 
 
 @import './media';
