--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -48,4 +48,9 @@
         display: flex;
         justify-content: space-evenly;
     }
+    iframe {
+        width: 100%;
+        height: 630px;
+        
+    }
 }
